Fixed spacing between elements on details page

--- a/css/detail.css
+++ b/css/detail.css
@@ -84,7 +84,6 @@
   content: counter(counter-instruction);
   position: absolute;
   left: 0;
-  /* top: 1rem; */
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
@@ -210,22 +209,25 @@ fieldset {
 }
 
 @media (max-width: 600px) {
-  body.detail-page .mobile-search-actions,
-  body.detail-page .mobile-actions,
-  body.detail-page .sub-nav {
-    display: none !important;
-  }
+
 
   .detail-layout {
+    padding: 0;
+  }
+
+  .detail-main {
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     padding: 1rem;
+    gap: 1rem;
   }
 
-  .recipe-card,
-  #ingredients,
-  #instructions,
-  .timer-section {
-    margin: 0 1rem 1rem;
+  #instructions, 
+  #ingredients {
+    margin: 0;
+    align-self: start;
+    margin-left: 0.5rem;
   }
-
 }
